fix spacing difference

--- a/sass/module/hero.scss
+++ b/sass/module/hero.scss
@@ -6,6 +6,9 @@
 	padding: 50px 0;
 	.gs-container {
 		position: relative;
+		margin-left: auto!important;
+		margin-right: auto!important;
+		box-sizing: border-box;
 	}
 }
 
